# Developing-AI-ML-Solutions-on-AWS

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: cicd.yaml
code/ch-01-data-engineering/: Makefile  README.md  docker-compose.yml  ruff.toml
code/ch-01-data-engineering/aws/: Makefile  README.md  redshift-serverless.yaml
code/ch-01-data-engineering/bureau-elt/: generate_bureau_files.py  glue_bureau_job.py
code/ch-01-data-engineering/feature-store/: ingest_features.py  lookup_features.py
code/ch-01-data-engineering/lake-basics/: iceberg_applications.py  parquet_lake.py  s3_objects.py
code/ch-01-data-engineering/sagemaker-local/: app.py  store.py
code/ch-01-data-engineering/tests/: test_sagemaker_local.py
code/ch-01-data-engineering/trino/: iceberg.properties
code/ch-02-mlops/: .gitignore  Makefile  README.md  docker-compose.yml  ty.toml
code/ch-02-mlops/aws/: Makefile  README.md  mlflow_app.sh
code/ch-02-mlops/challenger/: Dockerfile  challenger_model.py  entrypoint.sh  mlflow_pyfunc.py  serve.py  train.py
code/ch-02-mlops/data/: generate_applications.py
code/ch-02-mlops/fixtures/: sample.json
code/ch-02-mlops/pipeline/: README.md  pipeline.py
code/ch-02-mlops/scorecard/: Dockerfile  entrypoint.sh  mlflow_pyfunc.py  scorecard_model.py  serve.py  train.py
code/ch-02-mlops/serving/: batch.py
code/ch-02-mlops/tests/: test_tuning.py
code/ch-03-generative-ai/: Makefile  README.md  corpus_data.py  docker-compose.yml  models.py  ruff.toml  stores.py  ty.toml
tools/: md_to_docx.py
(+72 files in other folders)
